--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -36,7 +36,6 @@ h2 {
 
 h3 {
 	padding-top: 1em;
-	color: #777;
 }
 
 blockquote {
@@ -222,6 +221,7 @@ pre {
 .footer-content {
 	color: white;
 	text-align: center;
+	font-family: 'Raleway', sans-serif;
 }
 
 	.footer-content a {
@@ -274,6 +274,7 @@ pre {
 
 .story {
 	padding: 20px 50px 0px 50px;
+	font-family: 'Raleway', sans-serif;
 }
 
 .story-signature {
@@ -321,14 +322,22 @@ pre {
 .preview-summary {
 	font-size: 12px;
 	font-weight: bold;
+	font-family: 'Raleway', sans-serif;
 }
 
 .map-section {
 	display: block;
 	margin: 200px auto 100px auto;
-	width: 60%;
+	width: 60vw;
 	height: auto;
 	position: relative;
+}
+
+@media only screen and (max-width: 844px) {
+    .map-section {
+		margin: 100px auto 50px auto;
+		width: 80vw;
+	}
 }
 
 .map-button {
@@ -340,12 +349,35 @@ pre {
 }
 
 .map-button-text {
+	font-family: 'Cinzel', serif;
+	font-weight: bold;
 	position: relative;
     left: 37%;
     bottom: 37px;
 	font-size: 1.1vw;
 	text-decoration: none;
     color: black;
+}
+
+@media only screen and (max-width: 880px) {
+    .map-button-text {
+		left: 36%;
+		bottom: 37px;
+		font-size: 1.6vw;
+	}
+}
+
+@media only screen and (max-width: 650px) {
+	.map-button {
+		left: 70%;
+		bottom: 20px;
+	}
+
+    .map-button-text {
+		left: 39%;
+		bottom: 21px;
+		font-size: 2vw;
+	}
 }
 
 .map-button-link:hover {
@@ -356,6 +388,10 @@ pre {
 	text-align: center;
 	background: lightgrey;
 	padding: 150px 0px;
+}
+
+.connect-blurb {
+	font-family: 'Cinzel', serif;
 }
 
 .connect-blurb:after {
@@ -371,6 +407,7 @@ pre {
 }
 
 .connect-form {
+	font-family: 'Raleway', sans-serif;
 	padding: 0% 5% !important;
 	margin-top: 25px;
 }
