--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -182,7 +182,8 @@ pre {
 
 .menu-content {
 	text-align: right;
-    padding-right: 20px;
+	padding-right: 20px;
+	font-family: 'Cinzel', serif;
 }
 
 .social-media-header {
