--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -569,28 +569,27 @@ pre {
 }
 
 #loader-image {
-	display: block;
-    margin: 45px auto 0px auto;
-    max-width: 300px;
+	max-width: 250px;
+    margin: 0px auto;
+    display: block;
+	padding: 50px 0px;
+	position: relative;
+	right: 8px;
 }
 
 #loader {
-	/* position: absolute;
-	left: 50%;
-	top: 50%; */
 	display: block;
-	margin: 50px auto !important;
-	z-index: 1;
-	width: 60px;
-	height: 60px;
-	margin: -75px 0 0 -75px;
-	border: 5px solid #f3f3f3;
-	border-radius: 50%;
-	border-top: 5px solid #DBC955;
-	width: 60px;
-	height: 60px;
-	-webkit-animation: spin 1s linear infinite;
-	animation: spin 1s linear infinite;
+    margin: 20px auto;
+    z-index: 1;
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #DBC955;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    position: relative;
+    right: 8px;
   }
 
   @-webkit-keyframes spin {
