--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -283,6 +283,23 @@ pre {
     right: 6vw;
 }
 
+.promo-video {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+	margin-top: 50px;
+}
+	.promo-video iframe {
+		position: absolute;
+		width: 80%;
+		height: 80%;
+		margin: auto;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
 .preview {
 	margin-top: 50px;
 }
