--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -94,10 +94,18 @@ pre {
  *
  */
 
+.filler-grey {
+	width: 100%;
+    height: 300px;
+    position: absolute;
+    background: lightgrey;
+    z-index: -1;
+}
+
 #footer {
 	clear: both;
 	font-size: 80%;
-	background: lightgrey;
+	background: transparent;
 }
 
 /*********************************************************************
@@ -176,10 +184,6 @@ pre {
 }
 
 /********************* BEGIN CUSTOM *********************/
-.main-content {
-	max-width: 1600px;
-}
-
 .menu-content {
 	text-align: right;
 	padding-right: 20px;
@@ -224,6 +228,8 @@ pre {
 	padding: 700px 0px 0px 0px;
 	width: 100%;
 	height: auto;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .footer-content {
@@ -406,7 +412,7 @@ div.map-section > a.d {
 	width: 35%;
     height: auto;
     position: relative;
-    left: 65%;
+    left: 82%;
     bottom: 40px;
 }
 
@@ -414,16 +420,26 @@ div.map-section > a.d {
 	font-family: 'Cinzel', serif;
 	font-weight: bold;
 	position: relative;
-    left: 37%;
+    left: 53%;
     bottom: 37px;
 	font-size: 1.1vw;
 	text-decoration: none;
     color: black;
 }
 
+@media only screen and (max-width: 1450px) {
+	.map-button {
+		left: 69%;
+	}
+
+    .map-button-text {
+		left: 40%;
+	}
+}
+
 @media only screen and (max-width: 880px) {
     .map-button-text {
-		left: 36%;
+		left: 40%;
 		bottom: 37px;
 		font-size: 1.6vw;
 	}
@@ -450,22 +466,25 @@ div.map-section > a.d {
 	text-align: center;
 	background: lightgrey;
 	padding: 150px 0px;
+	margin-bottom: -1px;
 }
 
 .connect-blurb {
 	font-family: 'Cinzel', serif;
 }
 
-.connect-blurb:after {
-	content: '';
-	height: 150px;
-	width: 1px;
+@media only screen and (min-width: 768px) {
+	.connect-blurb:after {
+		content: '';
+		height: 150px;
+		width: 1px;
 
-	position: absolute;
-	right: 0;
-	top: 50px;
+		position: absolute;
+		right: 0;
+		top: 50px;
 
-	background-color: #000000;
+		background-color: #000000;
+	}
 }
 
 .connect-form {
